image ext changes

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -95,7 +95,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/qbills.jpg" alt="">
+                  <img src="assets/img/portfolio/qbills.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/cbook.jpg" alt="">
+                  <img src="assets/img/portfolio/cbook.JPG" alt="">
                 </div>
 
               </div>
