--- a/portfolio.html
+++ b/portfolio.html
@@ -103,11 +103,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/qbills.JPG" height="250px !important" width="420px" alt="">
+              <img src="assets/img/portfolio/qbills.jpg" height="250px !important" width="420px" alt="">
               <div class="portfolio-info">
                 <h3>Qbills - WebApp</h3>
                 <div>
-                  <a href="assets/img/portfolio/qbills.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  <a href="assets/img/portfolio/qbills.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Qbills - Billing for Retail business"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -132,11 +132,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/cbook.JPG" height="250px !important" width="420px" alt="">
+              <img src="assets/img/portfolio/cbook.jpg" height="250px !important" width="420px" alt="">
               <div class="portfolio-info">
                 <h3>CBook - WebApp</h3>
                 <div>
-                  <a href="assets/img/portfolio/cbook.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  <a href="assets/img/portfolio/cbook.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Loan and Deposit Management system for interest free entity"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
